recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not found: value step
		current(step)
                        ^Tree:18: error: not found: value longeur
		longueur = longeur * shrink
                           ^