recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var longueur = length
	var etage = steps

	if (steps == 0) {
		return
	}

	else {
		
		current(step)

		avance(length)
		droite(angle)

		longueur = longeur * shrink
		etage -= 1

		tree(etage,longueur,angle,shrink)

		gauche(2*angle)

		tree(etage,longueur,angle,shrink)

		recule(longueur)

	}
}
